--- a/exam-pokedex/src/app/app.component.html
+++ b/exam-pokedex/src/app/app.component.html
@@ -1,2 +1,5 @@
 <h1>Bienvenue sur {{ title }}</h1>
 <h2> Serie de tests Git test1000000001</h2>
+<app-pokemeon-feu-list></app-pokemeon-feu-list>
+<app-pokemon-foudre></app-pokemon-foudre>
+<app-pokemon-plante></app-pokemon-plante>
